<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_key">23345386</string>
    <string name="umeng_appkey">54dc533ffd98c51e210001de</string>
    <string name="app_name">口袋神婆</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="yesterday">昨天</string>
    <string name="tomorrow">明天</string>
    <string name="tools">小工具</string>
    <string name="home">主页</string>
    <string name="pocket">口袋</string>
    <string name="friends">吉友</string>
    <string name="inferring">占卜</string>
    <string name="good_day">吉日</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="mine">我的</string>
    <string name="start_experience">开启口袋神婆</string>
    <string name="skin">皮肤</string>
    <string name="sticker">贴纸</string>
    <string name="today_notice">今日详细</string>
    <string name="uncertain_time">※不确定出生时辰可以选择00：00(阳历)</string>
    <string name="setting_user_info_tip">正确的填写性别和生日，才是你的个性运势~</string>
    <string name="app_des">藏在你口袋里的专属神婆</string>
    <string name="operator_tip">操作手册</string>
    <string name="re_photo">重新拍照</string>
    <string name="use_photo">使用照片</string>
    <string name="next_week">下周解锁事业线</string>
    <string name="hand_tip">正确描出你的掌纹长度和弧度</string>
    <string name="re_draw">重画</string>
    <string name="life_report">命格报告</string>
    <string name="element_report">五行报告</string>
    <string name="reach_the_bottom">碰到伦家底线了!</string>
    <string name="month_fortune">月运</string>
    <string name="master_augur">大师亲算</string>
    <string name="good_luck">开运物品</string>
    <string name="good_items">开运饰品</string>
    <string name="master_ask">大师问答</string>
    <string name="hot_ask">热门问题</string>
    <string name="click_to_see_all">查看全部</string>
    <string name="enter_address">填写收货地址</string>
    <string name="add_address">添加新地址</string>
    <string name="manage_address">管理收货地址</string>
    <string name="select_address">选择收货地址</string>
    <string name="select_default_address">设置默认</string>
    <string name="add">添加</string>
    <string name="goods_detail">商品详情</string>
    <string name="buyer_message">买家留言</string>
    <string name="buy_now">立即购买</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="shopping_cart">购物车</string>
    <string name="my_address">我的收货地址</string>
    <string name="postage">邮费</string>
    <string name="reply_paid_tip">我们会尽快安排发货!</string>
    <string name="submit_order">确认订单</string>
    <string name="no_orders">还没有相关订单哦</string>
    <string name="logistics_detail">物流详情</string>
    <string name="request_service">申请服务</string>
    <string name="refund_return">退货退款</string>
    <string name="select_reason">选择原因</string>
    <string name="return_reason">退货原因</string>
    <string name="refund_amount">退款金额</string>
    <string name="refund_detail">退款详情</string>
    <string name="submit_request">提交申请</string>
    <string name="completed_order">已完成订单</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="have_bind_phone">已绑定手机</string>
    <string name="change_phone">修改手机号</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="refund">退款</string>
    <string name="refunding">退款中</string>
    <string name="refund_success">退款成功</string>
    <string name="refund_failed">退款失败</string>
    <string name="pay">付款</string>
    <string name="has_paid">买家已付款</string>
    <string name="view_logistics">查看物流</string>
    <string name="confirm_receive">确认收货</string>
    <string name="deal_success">交易成功</string>
    <string name="deal_close">交易关闭</string>
    <string name="cancel_request">取消申请</string>
    <string name="request_again">重新申请</string>
    <string name="notice">提醒</string>
    <string name="message">客服留言</string>
    <string name="send_goods_link">发送宝贝链接</string>
    <string name="message_tip">口袋神婆官方算命群:462619602</string>
    <string name="answer">答案</string>
    <string name="reply_comment">回复留言</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="ten_years_fortune">十年大运</string>
    <string name="ten_years_fortune_chart">十年大运趋势图</string>
    <string name="see_me_ten_years">查看我的十年大运</string>
    <string name="ten_years_tip">人的一生的运程是在不断变化的，十年一大运五年一小运，交运即是指十年大运的转换或五年小运的转换。\n掌握十年流年大运，从运势整体上给自己的来一个规划，趋吉避凶。</string>
    <string name="clear_invalid_goods">清空失效宝贝</string>
    <string name="invalid_goods">对不起宝贝已经卖完了</string>
    <string name="sold_out">已下架</string>
    <string name="know_fortune">知运</string>
    <string name="custom_fortune">好运铺</string>
    <string name="my_order">我的订单</string>
    <string name="my_divination">我的占卜</string>
    <string name="wait_reply">待回复</string>
    <string name="has_reply">已回复</string>
    <string name="rewarded">已打赏</string>
    <string name="un_use">可使用</string>
    <string name="wait_pay">待付款</string>
    <string name="has_pay">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="my_card">我的卡券</string>
    <string name="get_my_card">兑换券</string>
    <string name="card">卡券</string>
    <string name="has_inferred"><xliff:g id="number">%d</xliff:g>人已算</string>
    <string name="inferring_search_hint">输入要测的事情</string>
    <string name="inferring_detail">测算详情</string>
    <string name="inferring_tip">#时辰很重要，要填对哦！</string>
    <string name="total_price">价格合计</string>
    <string name="price">价格</string>
    <string name="confirm_order">确认下单</string>
    <string name="pay_detail">付款详情</string>
    <string name="pay_amount">支付金额</string>
    <string name="confirm_pay">确认付款</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="has_payed">金主已付款</string>
    <string name="reply_tip">大师已起卦，五分钟即刻答复!</string>
    <string name="reply_hand_tip">大师已起卦，2小时内解密你的手相!</string>
    <string name="reply_face_tip">大师已起卦，2小时内解密你的面相!</string>
    <string name="reply_name_tip">在(我的)待回复页面跟踪订单</string>
    <string name="reply_ask_tip">大师会在两小时内回复您！</string>
    <string name="see_order">在我的——待回复页面跟踪订单</string>
    <string name="answer_tip">大师回复时间7点到22点</string>
    <string name="augury_answer_tip">大师五分钟内回复你!</string>
    <string name="augury_answer_for_name_tip">大师一分钟内回复你!</string>
    <string name="view_orders">查看订单</string>
    <string name="pay_success">支付成功</string>
    <string name="order_detail">订单详情</string>
    <string name="reply_orders">已回订单</string>
    <string name="wait_orders">待回订单</string>
    <string name="no_augury">您还没有订单哦</string>
    <string name="to_inferring">算一个</string>
    <string name="click_to_detail">点击查看详情</string>
    <string name="add_problem">添加问题</string>
    <string name="problem_des">简述你要提的问题</string>
    <string name="problem_tip">官方QQ交流群462619602</string>
    <string name="submit">提交</string>
    <string name="maybe_need">您可能需要</string>
    <string name="master_inferring">大师亲算，8:00~22:00在线，2小时内回复</string>
    <string name="point_tip">可使用<xliff:g id="number">%1d</xliff:g>福豆，可抵扣<xliff:g>%2s</xliff:g>元</string>
    <string name="point_convert"><xliff:g id="number">%1d</xliff:g>个福豆抵扣<xliff:g>%2s</xliff:g>元</string>
    <string name="add_point">已领取<xliff:g id="number">%d</xliff:g>福豆了哟！</string>
    <string name="confirm_convert">确认兑换</string>
    <string name="convert_point">福豆兑换</string>
    <string name="hands_answer">手的粗细及纹路每2-4周变化一次，左手掌纹代表你的先天，右手掌纹代表你的后天。手相的主要作用更全面细致的了解现在的自己，看清现在。</string>
    <string name="face_answer">人的命运和长相、气色息息相关，既有定数又有变数。从人的长相、气质、音容笑貌来判断和预知一个人的过去和未来。</string>
    <string name="inferring_hand">测手相</string>
    <string name="shake">神婆摇一摇</string>
    <string name="two_th_marriage">两世因果缘分</string>
    <string name="this_life">今生</string>
    <string name="previous_life">前世</string>
    <string name="this_previous_life">前世今生</string>
    <string name="friend">朋友</string>
    <string name="lover">恋人</string>
    <string name="colleague">同事</string>
    <string name="you_star">你的星宿</string>
    <string name="relation">关系</string>
    <string name="no_empty_your_birth">你的生辰不能为空</string>
    <string name="no_empty_her_birth">TA的生辰不能为空</string>
    <string name="no_empty_your_relationship">请选择你们之间的关系</string>
    <string name="select_your_relationship">请选择你们之间的关系</string>
    <string name="blood_to_life">血型看命运</string>
    <string name="blood_tip">*填写父母血型揭秘更多哦</string>
    <string name="your_blood">你的血型</string>
    <string name="father_blood">爸爸血型</string>
    <string name="mother_blood">妈妈血型</string>
    <string name="hint_select">选填</string>
    <string name="your_blood_tip">你的血型:</string>
    <string name="type">型</string>
    <string name="hands">手相</string>
    <string name="face">面相</string>
    <string name="upload_left">上传左手</string>
    <string name="upload_right">上传右手</string>
    <string name="upload_front">上传正面</string>
    <string name="upload_side">上传侧面</string>
    <string name="star_sign">星座</string>
    <string name="blood_type">血型</string>
    <string name="app_score">五星好评</string>
    <string name="score_reward">送50个福豆</string>
    <string name="score_convert">福豆兑换</string>
    <string name="membership_card">会员卡</string>
    <string name="to_be_member">成为会员</string>
    <string name="normal">普通用户</string>
    <string name="member">会员用户</string>
    <string name="membership_rights">会员尊享</string>
    <string name="member_rights">会员权益</string>
    <string name="membership">会员福利</string>
    <string name="join_member">加入会员 送免费手相</string>
    <string name="my_score">我的福豆</string>
    <string name="renewals">去续费</string>
    <string name="to_receive">去领取</string>
    <string name="about_text">关于我们</string>
    <string name="qq_group">胖子乐算命馆群号:472643922</string>
    <string name="weixin_official_account">微信公众号:口袋神婆</string>
    <string name="company">上海奇竺网络科技有限公司</string>
    <string name="company_web">官方网站:www.ishenpo.com</string>
    <string name="feedback">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="qr_card">二维码名片</string>
    <string name="download_from_qr_card">让小伙伴扫描二维码即可快速下载~</string>
    <string name="back">返回</string>
    <string name="calendar">日历</string>
    <string name="hot_search">热搜词</string>
    <string name="guess_you_what">猜猜你还需要:</string>
    <string name="feedback_tip">口袋神婆免费算命群:462619602</string>
    <string name="first_name">名</string>
    <string name="last_name">姓</string>
    <string name="hint_iput_name">填写汉字</string>
    <string name="child_last_name">宝宝的姓</string>
    <string name="child_sex">宝宝性别</string>
    <string name="complete">完成</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="select_sex">请选择TA的性别</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="phone_number">手机号</string>
    <string name="six_password">六位数密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="verification_code">验证码</string>
    <string name="password">密码</string>
    <string name="password_tip">长时间没有收到短信，请重新获取验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="weixin_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="service_policy_description">请你务必审慎阅读、充分理解协议中相关条款内容。你一旦注册口袋神婆，即视为你已了解并完全同意《用户协议》和《隐私政策》各项内容，包括口袋神婆对使用协议随时所做的任何修改。如你不同意本协议及/或随时对其的修改，请你立即停止注册及使用口袋神婆所提供的全部服务。</string>
    <string name="service_policy_agree">同意</string>
    <string name="service_policy_title">用户协议和隐私政策</string>
    <string name="service_policy_disagree">暂不使用</string>
</resources>