<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <include layout="@layout/title_has_back_btn" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/gray33"
        android:textColorHint="@color/gray33"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_gray41_trans"
            android:gravity="center_vertical"
            android:hint="@string/verification_code"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/gray33"
            android:textColorHint="@color/gray33"
            android:textSize="18sp" />

        <com.qizhu.rili.widget.TimeTextView
            android:id="@+id/btn_code"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_gray41"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/gray9"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:hint="@string/six_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/gray33"
        android:textColorHint="@color/gray33"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/gray33"
        android:textColorHint="@color/gray33"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/password_tip"
        android:textColor="@color/gray33"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/purple1_round_corner_bg"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>