<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/smart_pro_rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pro_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/service_policy_title"
        android:textColor="@color/color_131329"
        android:textSize="@dimen/text_size_17" />

    <TextView
        android:id="@+id/content_tv"
        android:layout_below="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/service_policy_description"
        android:textColor="@color/color_131329"
        android:textSize="@dimen/text_size_15" />




    <LinearLayout
        android:id="@+id/operate_ll"
        android:layout_below="@+id/content_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/refuse_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/service_policy_disagree"
            android:textColor="@color/color_131329"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/agree_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pro_agree_tv"
            android:gravity="center"
            android:text="@string/service_policy_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>

</RelativeLayout>

