<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/qr_card"
        android:textSize="18sp"
        android:textColor="@color/red3"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/download_from_qr_card"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        android:background="@color/red3"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>