<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <include layout="@layout/title_has_back_btn" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/gray33"
        android:textColorHint="@color/gray33"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/gray33"
        android:textColorHint="@color/gray33"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/forget_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/gray7"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/purple1_round_corner_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>