<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <include layout="@layout/title_has_back_btn" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:text="@string/birthday"
        android:textColor="@color/gray33"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/round_gray41_trans"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:text="@string/sex"
        android:textColor="@color/gray33"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/purple1_round_corner_bg"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>