<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/notice"
        android:textColor="@color/gray3"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/gray3"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray6" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/gray3"
            android:textSize="22sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@color/gray6" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/purple31"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>